[package]
name = "influxrpc_compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
pbbinarylog  = { path = "./pbbinarylog" }
# pull generated_types (which includes the influx rpc protobuf definitions) from the IOx repo
# TODO: it would be nice if the storage rpc were broken down into their own crate (separate from the iox management protos)
generated_types = { git = "https://github.com/influxdata/influxdb_iox.git", rev="85aa019f5004a0c6c536a75384d7dd2428547beb" }
bytes = { version = "1.0", features = ["serde"] }
chrono = "0.4.19"
prost = "0.9"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }

[workspace]
members = [
    "pbbinarylog",
]
